infra/k8s/reservation-service/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: reservation-service
  namespace: core-services
spec:
  podSelector:
    matchLabels:
      app: reservation-service
  policyTypes: ["Ingress", "Egress"]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: edge
      ports:
        - protocol: TCP
          port: 8083
  egress:
    - {}
